Fix column layout on ie11

--- a/css/base.scss
+++ b/css/base.scss
@@ -117,6 +117,12 @@ header {
 
 }
 
+.ie {
+    #page{
+        display: block;
+    }
+}
+
 
 footer > p {
     font-size: 0.9em;
